no list -> home view collapsing bug fixed

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -173,6 +173,7 @@ footer{
 }
 .listSite{
   height: 100vh;
+  width:100vw;
 }
 .listSitelogin{
   display: flex;
